Tried to fix the style on mobile

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h2 {
 	margin-left:auto;
 	margin-right:auto;
 	max-width: 800px;
+	font-size: : 50px;
 	font-family:"Noto Sans TC";
 	text-align: justify;
 	text-justify: inter-word;
